# narratoflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md
benchmarks/samples/: norwegian_sample.txt
docs/: api.md  architecture.md  async.md  benchmark.md  cli.md  index.md  install.md  language.md  profiles.md  providers.md  quickstart.md  roadmap.md  schemas.md  spacy.md  typing.md
examples/: basic_usage.py  custom_schema.py
examples/notebooks/: 01_quickstart.ipynb  02_token_savings.ipynb  03_long_doc_async.ipynb  04_custom_schema.ipynb  README.md
narrato/: __init__.py  benchmark.py  cli.py  codebook.py  extractors.py  language.py  pipeline.py  preprocess.py  profiles.py  schemas.py  spacy_pipeline.py  tokenizers.py
narrato/data/: stopwords_da.txt  stopwords_de.txt  stopwords_en.txt  stopwords_fi.txt  stopwords_fr.txt  stopwords_it.txt  stopwords_no.txt  stopwords_pl.txt  stopwords_pt.txt  stopwords_sv.txt
narrato/providers/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
scripts/: run_bench.py
tests/: test_async.py  test_codebook.py  test_extractors.py  test_language.py  test_ollama.py  test_pipeline.py  test_preprocess.py  test_profiles.py  test_schemas.py  test_spacy.py  test_typing_marker.py
