[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narratoflow"
version = "0.1.2"
description = "Compress huge LLM context into dense intermediate representations. Provider-agnostic. Norwegian first-class."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Mrrobi", email = "mrrobi040@gmail.com" },
]
maintainers = [
    { name = "Mrrobi", email = "mrrobi040@gmail.com" },
]
keywords = [
    "llm",
    "compression",
    "prompt-engineering",
    "anthropic",
    "openai",
    "norwegian",
    "narrative-generation",
    "token-optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "tiktoken>=0.7",
    "anthropic>=0.39",
    "openai>=1.40",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
benchmark = [
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/Mrrobi/narratoflow"
Issues = "https://github.com/Mrrobi/narratoflow/issues"
Repository = "https://github.com/Mrrobi/narratoflow"

[project.scripts]
narratoflow = "narrato.cli:main"
narrato = "narrato.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["narrato"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
